--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Floating
+    implementation 'com.github.clans:fab:1.6.4'
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:30.3.2')
     implementation'com.google.firebase:firebase-auth:21.0.6'
