--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.projeto.organizze">
+    package="com.projeto.organizze" >
 
     <application
         android:allowBackup="true"
@@ -8,21 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Organizze">
-        <activity
-            android:name=".DespesasActivity"
-            android:theme="@style/Despesatheme"
-            android:exported="false" />
-        <activity
-            android:name=".ReceitasActivity"
-            android:theme="@style/Receitatheme"
-
-            android:exported="false" />
+        android:theme="@style/Theme.Organizze" >
         <activity
             android:name=".PrincipalActivity"
             android:exported="false"
             android:label="@string/title_activity_principal"
             android:theme="@style/Theme.Organizze.NoActionBar" />
+        <activity
+            android:name=".DespesasActivity"
+            android:exported="false"
+            android:theme="@style/Despesatheme" />
+        <activity
+            android:name=".ReceitasActivity"
+            android:exported="false"
+            android:theme="@style/Receitatheme" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
@@ -32,7 +31,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Intro">
+            android:theme="@style/Theme.Intro" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
