--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    //noinspection GradleCompatible
+    implementation'com.android.support:cardview-v7:26.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Floating
     implementation 'com.github.clans:fab:1.6.4'
